[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grout"
version = "0.1.0"
description = "Grid tile indexing for chunked raster access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Michael Sumner" }
]
keywords = ["raster", "tiles", "chunks", "gdal", "xarray", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = []

[project.optional-dependencies]
pandas = ["pandas"]
polars = ["polars"]
all = ["pandas", "polars"]
dev = ["pytest", "pandas", "polars"]

[project.urls]
Homepage = "https://github.com/hypertidy/grout-py"
Repository = "https://github.com/hypertidy/grout-py"

[tool.hatch.build.targets.wheel]
packages = ["src/grout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
